--- a/public/index.html
+++ b/public/index.html
@@ -15,24 +15,25 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300;400;500;600;700&family=Nunito:wght@200;300;400;500;600;700&display=swap"
     rel="stylesheet">
-  <title>Kardiyolog Hayal Mirzayev</title>
-  <!-- Hotjar Tracking Code for my site -->
-<script>
-  (function(h,o,t,j,a,r){
-      h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-      h._hjSettings={hjid:3581532,hjsv:6};
-      a=o.getElementsByTagName('head')[0];
-      r=o.createElement('script');r.async=1;
-      r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
-      a.appendChild(r);
-  })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
-</script>
+  <title>Kardiyolog Dr. Hayal Mirzayev</title>
+  <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM="
+    crossorigin="anonymous"></script>
 </head>
 
 <body>
-  
-  <div id="root"></div>
 
+  <div id="root"></div>
+  <script>
+    plugins: [
+      // other plugins,
+      new webpack.ProvidePlugin({
+        $: 'jquery',
+        jQuery: 'jquery',
+        'window.jQuery': 'jquery'
+      }),
+    ]
+    
+  </script>
 </body>
 
 </html>
