--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300;400;500;600;700&family=Nunito:wght@200;300;400;500;600;700&display=swap"
     rel="stylesheet">
-  <title>Kardiyolog Dr. Hayal Mirzayev</title>
+  <title>Kardiyolog Dr. Khayal Mirzayev</title>
   <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM="
     crossorigin="anonymous"></script>
 </head>
